Updated tests, changed the endpoints and updated the Product model